--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ape-cricket": "^1.1.3",
     "bluebird": "^3.4.7",
-    "node-rest-client": "^2.0.1"
+    "node-rest-client": "^2.0.1",
+    "request": "^2.83.0"
   }
 }
